--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,6 @@
-# Ignore all json files in the IOM directory
-/Desktop/AAEE/IOM/*.json
+/plunetpulls-ca50ccd56cf0.json
+/usernames.py
+/client_secret_228806865248-gh10iard4bscdhssfj3do49qd20rcfk8.apps.googleusercontent.com.json
+/credentials.yaml
+/global-ace-417010-a45b5fe90edc.json
+/google-ads.yaml
